Bug en imagen serializer solucionado. Bug en overflow frontend

--- a/frontend/react_frontend/src/App_Style.css
+++ b/frontend/react_frontend/src/App_Style.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 @media screen and (max-width: 910px){
